main/default/objects/Document_Revision__c/Document_Revision__c.object-meta.xml
<CustomObject>
    <label>Document Revision</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>