main/default/objects/Document_Revision__c/fields/Binder__c.field-meta.xml
<CustomField>
    <fullName>Binder__c</fullName>
    <label>Binder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>