main/default/objects/Document_Revision__c/fields/Document_Azure_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Azure_Id__c</fullName>
    <label>Document Azure Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>