main/default/objects/Document_Revision__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOA</fullName>
            </value>
            <value>
                <fullName>Binder</fullName>
            </value>
            <value>
                <fullName>PolicyForm</fullName>
                <label>Policy Form</label>
            </value>
            <value>
                <fullName>ChangeEndorsement</fullName>
                <label>Change Endorsement</label>
            </value>
            <value>
                <fullName>QuoteProposal</fullName>
                <label>Quote Proposal</label>
            </value>
            <value>
                <fullName>WorkSheet</fullName>
            </value>
            <value>
                <fullName>QuoteSchedulePrimary</fullName>
                <label>Quote Schedule Primary</label>
            </value>
            <value>
                <fullName>QuoteScheduleExcess</fullName>
                <label>Quote Schedule Excess</label>
            </value>
            <value>
                <fullName>PolicySchedulePrimary</fullName>
                <label>Policy Schedule Primary</label>
            </value>
            <value>
                <fullName>PolicyScheduleExcess</fullName>
                <label>Policy Schedule Excess</label>
            </value>
            <value>
                <fullName>QuoteSchedulePrimaryAmendment</fullName>
                <label>Quote Schedule Primary Amendment</label>
            </value>
            <value>
                <fullName>QuoteScheduleExcessAmendment</fullName>
                <label>Quote Schedule Excess Amendment</label>
            </value>
            <value>
                <fullName>ExcessPolicyAmendment</fullName>
            </value>
            <value>
                <fullName>PrimaryPolicyAmendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>