main/default/objects/Document_Revision__c/fields/Is_ShopX__c.field-meta.xml
<CustomField>
    <fullName>Is_ShopX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_ShopX</label>
    <type>Checkbox</type>
</CustomField>