main/default/objects/Document_Revision__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Document Revisions</relationshipLabel>
    <relationshipName>Document_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>