main/default/objects/Document_Revision__c/fields/Policy_Wording__c.field-meta.xml
<CustomField>
    <fullName>Policy_Wording__c</fullName>
    <formula>IF(ISBLANK(Policy_Wording_Link__c),&quot;&quot;,HYPERLINK(Policy_Wording_Link__c , &apos;Policy Wording Document&apos;))</formula>
    <label>Policy Wording</label>
    <type>Text</type>
</CustomField>