main/default/objects/Document_Revision__c/fields/Policy_Wording_Link__c.field-meta.xml
<CustomField>
    <fullName>Policy_Wording_Link__c</fullName>
    <label>Policy Wording Link</label>
    <type>Url</type>
</CustomField>