main/default/objects/Document_Revision__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Document Revisions</relationshipLabel>
    <relationshipName>Document_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>