main/default/objects/Document_Revision__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <formula>TEXT(Quote_Id__r.Quote_Type__c)</formula>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>