main/default/objects/Document_Revision__c/fields/Sent_to_Billing__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Billing__c</fullName>
    <label>Sent to Billing</label>
    <type>DateTime</type>
</CustomField>