main/default/objects/Document_Revision__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Document Revisions</relationshipLabel>
    <relationshipName>Document_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>