main/default/objects/Document_Revision__c/recordTypes/Policy.recordType-meta.xml
<RecordType>
    <fullName>Policy</fullName>
    <active>true</active>
    <label>Policy</label>
</RecordType>